# symphony

./: .dockerignore  .gitignore  .gitmodules  CODEOWNERS  README.md  SECURITY.md  done  experimental-features.md  go.work  go.work.bk  go.work.sum  merge.sh  nuget.config  symphony.code-workspace
.devcontainer/: devcontainer.json
.pipelines/: IntegrationTests.yml  IntegrationTestsPR.yml  OneBranch.Buddy.buddy.yml  OneBranch.Buddy.develop.yml  OneBranch.PullRequest.pr.yml  OneBranch.PullRequest.yml  symphony-atlas-pipelines.md
.setup/pipelines/: .npmrc  (+6 more)
agent/: Cargo.toml  Dockerfile  README.md  go.mod  go.sum  magefile.go
api/: .dockerignore  .gitignore  0045d24b-5403-4c37-8f9d-e0d8f7f09c92-output.json  Dockerbuild  Dockerfile  Dockerfile.ade  Dockerfile.agent  Dockerfile.agent-ffmpeg  Dockerfile.azure  Dockerfile.poll-agent  Dockerfile.proxy  Dockerfile.sidecar  Dockerfile.target-agent  docker-compose-agent.yaml  docker-compose-poll-agent.yaml  docker-compose-target-agent.yaml  docker-compose.azure.yaml  docker-compose.yaml  entrypoint.sh  go.mod  go.sum  magefile.go  main.go  run.sh  symphony-agent.json  symphony-api-dev-console-trace.json  symphony-api-dev-zipkin-trace.json  symphony-api-dev.json  symphony-api-no-k8s-hydra.json  symphony-api-no-k8s-munchen.json  symphony-api-no-k8s-new-york.json  symphony-api-no-k8s-secure-mqtt.json  symphony-api-no-k8s-site1.json  symphony-api-no-k8s-tokyo.json  symphony-api-no-k8s.json  symphony-api-poll-agent.json  symphony-api-production.json  symphony-api-test.json  symphony-api.json  symphony-k8s-poll-agent.json  (+11 more)
cli/: .gitignore  README.md  cli-dev.sh  get_helm.sh  go.mod  go.sum  magefile.go  main.go
coa/: README.md  exclude-from-code-coverage.txt  go.mod  go.sum  magefile.go
docs/: .gitignore  README.md
docs-site/: .gitignore  config.toml  go.mod  go.sum  hugo.toml  package-lock.json  package.json
docs/samples/piccolo/http-wasm/: Cargo.toml
docs/samples/piccolo/http-wasm/src/: main.rs
gitops/: .env.example  .gitignore  Dockerfile  build.sh  go.mod  go.sum
hydra/: go.mod  go.sum  hydra.go
k8s/: .dockerignore  Dockerfile  Dockerfile.azure  Makefile  PROJECT  README.md  docker-compose.azure.yaml  docker-compose.yaml  go.mod  go.sum  magefile.go  main.go  main_azure.go
landing/: .gitignore  LICENSE
localenv/: README.md  go.sum  header.txt  magefile.go  symphony-chart-values.yaml  symphony-values.yaml
piccolo/: Cargo.toml
piccolo/0.0.1/: piccolo
piccolo/0.0.1/sysext/: ignition.ign  ignition.json
piccolo/0.0.1/sysext/piccolo/usr/lib/systemd/system/: piccolo.service
piccolo/0.0.1/sysext/piccolo/usr/lib/systemd/system/multi-user.target.d/: 10-piccolo-service.conf
piccolo/src/: main.rs
remote-agent/: ReadMe.md  client-cert.pem  client-key.pem  client.pfx  config.json  go.mod  go.sum  main.go  main_linux.go  main_windows.go
sdks/symphony-python/: .gitignore  README.md  pyproject.toml
sdks/symphony-python/docs/: API.md  FEATURES.md  GLOSSARY.md  QUICKSTART.md
sdks/symphony-python/examples/: 01_basic_client.py  02_target_management.py  03_solution_deployment.py  04_coa_provider.py  05_summary_tracking.py  06_error_handling.py  README.md
sdks/symphony-python/src/symphony_sdk/: __init__.py  api_client.py  models.py  summary.py  types.py
sdks/symphony-python/tests/: test_api_client.py  test_models.py  test_summary.py  test_types.py
symphony-extension/: README.md  resource-sync-rules.md  symphony-extension-setup.sh
symphony-rp/: README.md
test/: README.md
zonic-cars/: README.md
(+2451 files in other folders)
