[package]
name = "piccolo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.26.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level=3
strip="symbols"
debug=false