[package]
name = "http-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper_wasi = { version = "0.15.2", features = ["full"]}
tokio_wasi = { version = "1.25.2", features = ["rt", "macros", "net", "time", "io-util"]}